Add headers to the requests in CompletionFacade.java and AIGatewayServiceProvider.java
- Include User-Agent and Auth-Type headers in the request in CompletionFacade.java
- Change header "Embedded-Repos" to "Embedded-Repos-V2" and add "X-B3-Language" header in the request in AIGatewayServiceProvider.java