@@ -2,11 +2,11 @@ package com.zhongan.devpilot.actions.editor.inlay.languages;
 
 import com.zhongan.devpilot.actions.editor.inlay.ChatShortcutHintBaseProvider;
 
-import java.util.Arrays;
+import java.util.List;
 
 public class JavaChatShortcutHintProvider extends ChatShortcutHintBaseProvider {
 
     public JavaChatShortcutHintProvider() {
-        super(Arrays.asList("CLASS", "METHOD"));
+        super(List.of("METHOD"));
     }
 }
